build: fix details in TBS documentation

--- a/docs/500-tbs.md
+++ b/docs/500-tbs.md
@@ -22,12 +22,12 @@ does not make any assumptions about the content of your blobs. They are never al
 When you submit your blob to the service, you will get a blob unique id (`blob_uid`). You have to
 know your `blob_uid` to retrieve it. There is no other way for the moment (no search service, no listing).
 
-You can provide an indicative (media type)[https://en.wikipedia.org/wiki/Media_type] to your blob. It
+You can provide an indicative [media type](https://en.wikipedia.org/wiki/Media_type) to your blob. It
 will be returned as a `HTTP Content-Type header` during retrieval.
 
 ### lifetime
 
-All blobs have a lifetime (in seconds). The lifetime can be specific to each blob event there is a
+All blobs have a lifetime (in seconds). The lifetime can be specific to each blob, even if there is a
 default and a maximum value in global configuration. There is no real limit to this lifetime but keep
 in mind that this service was designed as a "temporary blob service" and not a "persistant storage solution".
 So we optimized it for speed, not for safety.
@@ -38,7 +38,7 @@ You can add some extra key/values (limited to 64 key/values) for each blob you s
 
 Each key is limited to 64 characters. Allowed characters for keys are:
 
-- lowercase alphanumeric ones `[0-9a-zA-Z]`
+- alphanumeric ones `[0-9a-zA-Z]`
 - and '-' (hyphen)
 
 Each value is limited to 1024 characters. Allowed characters for keys are:
@@ -112,7 +112,7 @@ If `delete=1`, the blob is deleted just after the read. So, with this parameter,
 
 Notes:
 
-- if you set a `X-TmpBlobStore-ContentType` header during `POST` operation, the value will be sent in the reply of this `GET` operation as standard `Content-Type` header (this is really important if (for example) you store a PNG image and you want that this file will be automatically recognized as an image by a browser using this download link)
+- if you set a `X-TmpBlobStore-ContentType` header during `POST` operation, the value will be sent in the reply of this `GET` operation as standard `Content-Type` header (this is really important if (for example) you store a PNG image and you want this file to be automatically recognized as an image by a browser using this download link)
 - if you set a `X-TmpBlobStore-ContentDisposition` header during `POST` operation, the value will be sent in the reply of this `GET` operation as standard `Content-Disposition` header (this can be really useful if you want to force the download filename for a browser (or for `wget` with `--content-disposition` flag or for `curl` with `-OJ` flags)
 - `<FIXME>`
 - if you set some extra key-values during `POST` operation, the key/values will be returned as `X-TmpBlobStore-Extra-{Yourkey}: {your_value}` headers with the blob during this `GET` operation
